--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -2,9 +2,13 @@
   flex-direction: column;
   width: 100%;
   .list-box {
-    margin-top: 38px;
+    margin-top: 30px;
+    height: calc(100vh - 90px)
   }
-  .dragUpdataPage{height: 100vh;position: relative;overflow: hidden;
+  .dragUpdataPage{
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
     .downDragBox{
       width: 100%;
       top: 0px;
@@ -27,6 +31,9 @@
     }
     .dragUpdata{height: 100%;width: 100%;position: absolute;}
     .downText{margin-left: 20px;}
+  }
+  .at-nav-bar__title {
+    font-size: 32px;
   }
   .at-list {
     margin: 10px 0;
@@ -56,5 +63,27 @@
   }
   .at-drawer__content {
     width: 80vw;
+  }
+  .my-message {
+    .item-extra__info {
+      margin-right: 40px;
+      margin-bottom: 6px;
+    }
+  }
+  .my-item-thumb,.my-item-content,.my-item-extra {
+    display: inline-block;
+  }
+  .my-item-thumb {
+    width: 96px;
+    margin-right: 12px;
+    margin-left: 20px;
+  }
+  .my-item-content,.my-item-extra {
+    line-height: 100px;
+  }
+  .my-item-extra {
+    float: right;
+    margin-right: 20px;
+    margin-top: 10px;
   }
 }
