优化代码，效果图

--- a/src/pages/detail/index.scss
+++ b/src/pages/detail/index.scss
@@ -1,4 +1,4 @@
-@import '~taro-ui/dist/style/index.scss';
+// @import '~taro-ui/dist/style/index.scss';
 .detail {
   flex-direction: column;
   width: 100%;
