--- a/src/pages/message/index.scss
+++ b/src/pages/message/index.scss
@@ -1,4 +1,4 @@
-@import '~taro-ui/dist/style/index.scss';
+// @import '~taro-ui/dist/style/index.scss';
 .message {
   flex-direction: column;
   width: 100%;
