--- a/src/pages/index/banner/myList.scss
+++ b/src/pages/index/banner/myList.scss
@@ -19,6 +19,10 @@
     text-align: center;
     color: white;
     background-color: lightblue;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+    white-space: nowrap;
   }
   .at-list__item-content {
     width: calc(100% - 96px - 128px);
